--- a/Astghik_Saghyan/Homeworks/Bash/02_22.05.18/README
+++ b/Astghik_Saghyan/Homeworks/Bash/02_22.05.18/README
@@ -5,3 +5,5 @@ $ ./filname
 2. For running the tree.sh, you have to add the first argument - a directory path, and the second argument - a number
 
 3. For runing the string.sh, add two string arguments. If string contain white spaces, use "".
+
+4. For runing the cloneRepo.sh, you have to add an git URL as argument.
